Remove matching engine references (#8)
* added vectors remove operation

* removed references to matching engine client